Arquivos atualizados para acesso via mobile

--- a/style.css
+++ b/style.css
@@ -1,19 +1,23 @@
 @import url("https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap");
 
 * {
-  margin: 5px;
-  padding: 5px;
+  margin: 1px;
+  margin-bottom: 0;
+  padding: 1px;
 }
 
 html {
   scroll-behavior: smooth;
 }
+
 body {
   background-color: white;
   background-image: url(assets/background.jpg);
   background-position: center;
   background-attachment: scroll;
-  background-size: 100% 100%;
+  background-size: cover;
+  margin: 10px;
+  height: 100%;
 }
 
 .borda_texto {
@@ -22,12 +26,23 @@ body {
   letter-spacing: 1px;
   color: black;
   text-align: center;
-  height: 260px;
+  height: 140px;
+}
+p {
+  font-family: "Great Vibes", cursive;
+  font-size: 30px;
+  text-align: center;
+}
+.container1 {
+  display: block;
+  justify-content: space-between;
+  height: 20px;
 }
 .container {
   display: flex;
   justify-content: center;
-  margin-top: 190px;
+  margin-top: 300px;
+  margin-bottom: 90px;
 }
 .bt {
   text-decoration: none;
@@ -65,11 +80,78 @@ body {
   top: 5px;
   box-shadow: none;
 }
+@media only screen and (max-width: 480px) {
+  body {
+    background-color: white;
+    background-image: url(assets/background-resp.png);
+    background-position: center;
+    background-attachment: scroll;
+    background-size: cover;
+  }
+  .container1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0;
+    margin-bottom: 0;
+    height: 10px;
+  }
+  p {
+    font-family: "Great Vibes", cursive;
+    font-size: 30px;
+    text-align: center;
+  }
 
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 0;
+    margin-top: 350px;
+  }
+  .borda_texto {
+    font-family: "Great Vibes", cursive;
+    font-size: 45px;
+    letter-spacing: 1px;
+    color: black;
+    text-align: center;
+    height: 290px;
+  }
+
+  .botao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Great Vibes", cursive;
+    font-size: 30px;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    height: 80px;
+    width: 250px;
+    cursor: pointer;
+  }
+
+  .botao1 {
+    align-items: right;
+    background: rgba(250, 243, 243, 0.568);
+    box-shadow: 0 2px 0 rgba(8, 126, 12, 0.39);
+  }
+
+  .botao1:hover {
+    background: #1e920e3d;
+    box-shadow: 0 3px 0 rgba(88, 184, 91, 0.24);
+  }
+
+  .botao1:active {
+    position: relative;
+    top: 5px;
+    box-shadow: none;
+  }
+}
 footer {
   font-size: 8px;
   color: rgb(150, 150, 150);
-  margin-top: 20px;
-  margin-bottom: 0;
   text-align: center;
 }
