--- a/style.css
+++ b/style.css
@@ -1,80 +1,92 @@
 @import url("https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap");
 
 * {
-  margin: 1px;
-  margin-bottom: 0;
-  padding: 1px;
+  margin: 0;
+  padding: 0;
 }
 
 html {
   scroll-behavior: smooth;
 }
-
 body {
   background-color: white;
-  background-image: url(assets/background.jpg);
-  background-position: center;
-  background-attachment: scroll;
-  background-size: cover;
-  height: 100%;
 }
 
-.borda_texto {
+.background-section {
+  background-image: url(assets/background_desk_1.png);
+  background-size: cover;
+}
+.section-container {
   font-family: "Great Vibes", cursive;
-  font-size: 50px;
-  letter-spacing: 1px;
-  color: black;
-  text-align: center;
-  height: 130px;
-}
-p {
-  font-family: "Great Vibes", cursive;
-  font-size: 30px;
-  text-align: center;
-}
-.data {
-  font-size: 25px;
-}
-.container1 {
-  display: block;
-  justify-content: space-between;
-  height: 5px;
-}
-.container {
-  display: flex;
-  justify-content: center;
-  margin-top: 300px;
-  margin-bottom: 70px;
-}
-.bt {
-  text-decoration: none;
-  color: rgb(10, 10, 10);
-  letter-spacing: 1px;
-}
-.botao {
+  height: 100vh;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+h1 {
+  font-size: 60px;
+}
+.p1 {
+  font-size: 25px;
+}
+.p {
+  font-family: sans-serif;
+  font-size: 10px;
+  margin-left: 300px;
+}
+
+.card-container {
+  font-family: "Great Vibes", cursive;
+  font-size: 25px;
+  color: black;
+  width: 500px;
+  display: grid;
+  text-align: center;
+  margin-top: 10px;
+}
+
+a {
+  font-family: "Great Vibes", cursive;
+  text-decoration: none;
+  color: black;
+  letter-spacing: 1px;
+}
+.quando-onde {
+  font-size: 25px;
+  width: 500px;
+  margin-top: 20px;
+}
+
+.confirmar-pres {
+  width: 500px;
+  font-size: 25px;
+  margin-top: 10px;
+}
+
+.botao {
   font-family: "Great Vibes", cursive;
   font-size: 25px;
   font-weight: bold;
   border: none;
   border-radius: 10px;
-  padding: 1px;
-  height: 50px;
-  width: 350px;
+  padding: 5px;
   cursor: pointer;
+  align-items: center;
+  width: 250px;
+  margin-top: 5px;
 }
 
 .botao1 {
   align-items: right;
   background: rgba(250, 243, 243, 0.822);
-  box-shadow: 0 2px 0 rgba(158, 230, 160, 0.822);
+  box-shadow: 0 2px 0 rgba(230, 158, 188, 0.822);
 }
 
 .botao1:hover {
-  background: #a9eea065;
-  box-shadow: 0 3px 0 rgba(88, 184, 91, 0.788);
+  background: rgba(230, 158, 188, 0.822);
+  box-shadow: 0 3px 0 rgba(233, 131, 173, 0.822);
 }
 
 .botao1:active {
@@ -82,92 +94,86 @@ p {
   top: 5px;
   box-shadow: none;
 }
+
+footer {
+  font-family: sans-serif;
+  font-size: 8px;
+  text-align: center;
+  color: black;
+  margin-top: 10px;
+}
+
 @media only screen and (max-width: 480px) {
-  body {
-    background-color: white;
-    background-image: url(assets/background-resp.png);
-    background-position: center;
-    background-attachment: scroll;
-    background-size: cover;
-    height: 100%;
+  * {
+    margin: 0;
+    padding: 0;
   }
-  .borda_texto {
+
+  .background-section {
+    background-image: url(assets/background_mob_2.png);
+    background-size: cover;
+  }
+
+  .section-container {
+    font-family: "Great Vibes", cursive;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  h1 {
     font-family: "Great Vibes", cursive;
     font-size: 45px;
     letter-spacing: 1px;
-    color: black;
-    text-align: center;
-    height: 290px;
-    margin-top: 15px;
-    margin-bottom: 0;
+  }
+  .p1 {
+    font-size: 20px;
+  }
+  .p {
+    font-family: sans-serif;
+    font-size: 10px;
   }
 
-  .container1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 0;
-    margin-bottom: 0;
-    height: 5px;
-  }
-  p {
-    font-family: "Great Vibes", cursive;
-    font-size: 30px;
-    text-align: center;
-  }
-
-  .container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 0;
-    margin-top: 330px;
-  }
-
-  .botao {
-    display: block;
-    justify-content: center;
-    align-items: center;
+  .card-container {
     font-family: "Great Vibes", cursive;
     font-size: 25px;
-    border: none;
-    border-radius: 10px;
-    padding: 10px;
-    height: 80px;
-    width: 250px;
-    cursor: pointer;
-  }
-
-  .botao1 {
-    align-items: right;
-    background: rgba(250, 243, 243, 0.568);
-    box-shadow: 0 2px 0 rgba(151, 153, 151, 0.212);
-  }
-
-  .botao1:hover {
-    background: #91bb8b52;
-    box-shadow: 0 3px 0 rgba(87, 129, 89, 0.267);
-  }
-
-  .botao1:active {
-    position: relative;
-    top: 5px;
-    box-shadow: none;
-  }
-  .data {
-    font-size: 24px;
-  }
-  footer {
-    font-size: 8px;
-    color: rgb(150, 150, 150);
+    letter-spacing: 1px;
+    color: black;
+    width: 100%;
+    display: flex;
+    justify-content: center;
     text-align: center;
-    margin-bottom: 0;
-    margin-top: 25px;
+    margin-top: 10px;
+    flex-direction: column;
   }
-}
-footer {
-  font-size: 8px;
-  color: rgb(150, 150, 150);
-  text-align: center;
+
+  a {
+    font-family: "Great Vibes", cursive;
+    text-decoration: none;
+    color: black;
+    letter-spacing: 1px;
+  }
+
+  .quando-onde {
+    font-size: 25px;
+    width: 100%;
+    margin-top: 10px;
+  }
+
+  .confirmar-pres {
+    width: 100%;
+    font-size: 25px;
+    margin-top: 10px;
+  }
+
+  footer {
+    font-family: sans-serif;
+    font-size: 8px;
+    text-align: center;
+    color: black;
+    margin-top: 50px;
+  }
 }
